[tool.poetry]
name = "dewalnay"
version = "0.1.0"
description = "Generate wallpapers from gradients using Delaunay triangulation."
authors = ["Sasha Lišková <sliskova@proton.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
scipy = "^1.13.1"
pillow = "^10.3.0"
scikit-learn = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
